[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["jungggggggg <jungsu0705@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
